<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_detail_mg"
        app:cardBackgroundColor="@color/card_detail_bg"
        app:cardCornerRadius="@dimen/card_detail_radius"
        app:contentPadding="@dimen/card_detail_pd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvBookIdLabel"
                    style="@style/TextViewHeader.Detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/id" />

                <TextView
                    android:id="@+id/tvBookId"
                    style="@style/TextViewNormal.Detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    tools:text="@string/book_id_holder" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvBookTitleLabel"
                    style="@style/TextViewHeader.Detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/title" />

                <TextView
                    android:id="@+id/tvBookTitle"
                    style="@style/TextViewNormal.Detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    tools:text="@string/book_title_holder" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvBookAuthorLabel"
                    style="@style/TextViewHeader.Detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/author" />

                <TextView
                    android:id="@+id/tvBookAuthor"
                    style="@style/TextViewNormal.Detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    tools:text="@string/book_author_holder" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvBookPagesLabel"
                    style="@style/TextViewHeader.Detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/page" />

                <TextView
                    android:id="@+id/tvBookPages"
                    style="@style/TextViewNormal.Detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    tools:text="@string/book_page_holder" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnUpdate"
        style="@style/ButtonNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/update"
        app:layout_constraintEnd_toEndOf="@+id/cardView2"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <Button
        android:id="@+id/btnRemove"
        style="@style/ButtonOutline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/remove"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintEnd_toEndOf="@+id/btnUpdate"
        app:layout_constraintStart_toStartOf="@+id/btnUpdate"
        app:layout_constraintTop_toBottomOf="@+id/btnUpdate" />

</androidx.constraintlayout.widget.ConstraintLayout>