<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_detail_mg"
        app:cardBackgroundColor="@color/card_detail_bg"
        app:cardCornerRadius="@dimen/card_detail_radius"
        app:contentPadding="@dimen/card_detail_pd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvBookIdLabel"
                    style="@style/TextViewNormal.Detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/id" />

                <TextView
                    android:id="@+id/tvBookId"
                    style="@style/TextViewNormal.Detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    tools:text="@string/book_id_holder" />

            </LinearLayout>

            <EditText
                android:id="@+id/edtBookTitle"
                style="@style/EditTextNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book_title_holder" />

            <EditText
                android:id="@+id/edtBookAuthor"
                style="@style/EditTextNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book_author_holder" />

            <EditText
                android:id="@+id/edtBookPages"
                style="@style/EditTextNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book_page_holder" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnUpdate"
        style="@style/ButtonNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/update"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <Button
        android:id="@+id/btnCancel"
        style="@style/ButtonOutline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="@+id/btnUpdate"
        app:layout_constraintStart_toStartOf="@+id/btnUpdate"
        app:layout_constraintTop_toBottomOf="@+id/btnUpdate" />

</androidx.constraintlayout.widget.ConstraintLayout>