<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/book_item_mg_b"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="@color/book_item_bg"
    app:cardCornerRadius="@dimen/book_item_radius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/book_item_child_pd">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvBookIdLabel"
                style="@style/TextViewHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/id" />

            <TextView
                android:id="@+id/tvBookId"
                style="@style/TextViewNormal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                tools:text="book's id" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvBookTitleLabel"
                style="@style/TextViewHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/title" />

            <TextView
                android:id="@+id/tvBookTitle"
                style="@style/TextViewNormal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                tools:text="book's title" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvBookAuthorLabel"
                style="@style/TextViewHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/author" />

            <TextView
                android:id="@+id/tvBookAuthor"
                style="@style/TextViewNormal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                tools:text="book's author" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvBookPagesLabel"
                style="@style/TextViewHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/page" />

            <TextView
                android:id="@+id/tvBookPages"
                style="@style/TextViewNormal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                tools:text="book's page" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>